# mue604

./: AdvancedSynth.m  LICENSE  Notes.pptx  README.md
AudioPlugin/master/: CMakeLists.txt
Denoiser/: DenoiseSpeechUsingDeepLearningNetworksExample.mlx  Denoiser.m  denoiser_test.m  speechDenoisingRealtimeApp.m  testDenoisingNets.m
PitchShift/: Main_Distortion.m  MrShifty.asv  MrShifty.m  ParameterSmoother.m  infiniteClip.m  processBiquad.m
PitchShift/MrShifty.app/Contents/: Info.plist
PitchShift/MrShifty.app/Contents/MacOS/: MrShifty
Plugin-ChannelStrip/: CSP.m  CSP_AllFX.m  CSP_EQ3band.m  CSP_GUI.m  CSP_simpleGain.m  CSP_template.asv  CSP_template.m  bg.pptx
Plugin-EQ/: biquad.m  processBiquad.m
Plugin-Tonestack/: JamesTS2TF.m  OperatingMode.m  baxandall.m  ckt_design.pptx  draw_freq_plots.m  quarticRoots.m  solveJamesCoeffs.m  tonestack.m
